assets/static/style.css
body {
    text-align: center;
    font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
    font-size: 10pt;
}
div#main {
    width: 720px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 80px;
    text-align: left;
}
div#main > div#locals {
    position: absolute;
    top: 5px;
    right: 5px;
}
div#main > div#locals > ul {
    margin: 0px;
    padding: 0px;
}
div#main > div#locals > ul > li {
    display: inline-block;
    margin: 0px;
    padding: 0px 5px 0px 0px;
}
div#main > div#content {}
div#main > div#content > h1,
div#main > div#content > h2,
div#main > div#content > h3,
div#main > div#content > h4,
div#main > div#content > h5,
div#main > div#content > h6 {
    margin-left: 0px;
    padding-left: 0px;
}
div#main > div#content > h1:before,
div#main > div#content > h2:before,
div#main > div#content > h3:before,
div#main > div#content > h4:before,
div#main > div#content > h5:before,
div#main > div#content > h6:before {
    display: inline-block;
    box-sizing: border-box;
    width: 50px;
    margin: 0px;
    margin-left: -50px;
    padding: 0px;
    text-align: right;
    letter-spacing: -2px;
    color: #AAAAAA;
}
div#main > div#content > h1:before { content: "#"; }
div#main > div#content > h2:before { content: "##"; }
div#main > div#content > h3:before { content: "###"; }
div#main > div#content > h4:before { content: "####"; }
div#main > div#content > h5:before { content: "#####"; }
div#main > div#content > h6:before { content: "######"; }
div#main > div#content > dl.list {
    clear: both;
}
div#main > div#content > dl.list > dt {}
div#main > div#content > dl.list > dt span.title {
    color: #666666;
}
div#main > div#content img {
    max-width: 100%;
}
div#main > div#content > table {
    border-collapse: collapse;
}
div#main > div#content > table > thead > tr > th,
div#main > div#content > table > tbody > tr > td {
    border: 1px solid #CCCCCC;
    padding: 6px 10px;
}
div#main code {
    white-space: pre;
    font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
    background-color: #F0F0F0;
}
div#main > div#content > pre {
    width: 100%;
    box-sizing: border-box;
    padding: 1em;
    font-size: 90%;
    overflow: auto;
    background-color: #F0F0F0;
}
div#to_remark {
    position: fixed;
    top: 10px;
    right: 20px;
}

.searchArea {
    margin-bottom: 40px;
}
.searchArea > input {
    width: 100%;
    font-size: 140%;
    padding: 6px 10px;
    border: 1px solid #AAAAAA;
}

.urlArea > form.url_field_area {
    margin-top: 1em;
}
.urlArea > form.url_field_area > input {
    width: 100%;
    font-size: 140%;
    padding: 6px 10px;
    border-width: 0px;
    border-bottom: 1px solid #AAAAAA;
}
.urlArea > form.url_field_area > button {
    font-size: 140%;
    border-style: none;
    background-color: transparent;
    float: right;
}

